<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BPINI</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>


    <string name="user_role_admin">administrator</string>
    <string name="user_role_user">user</string>

    <string-array name="user_roles">
        <item>@string/user_role_user</item>
        <item>@string/user_role_admin</item>
    </string-array>

    <string-array name="user_roles_value">
        <item>user</item>
        <item>admin</item>
    </string-array>


    <string name="tag_type_unknown">unknown</string>
    <string name="tag_type_mode">mode</string>
    <string name="tag_type_item">item</string>

    <string-array name="tag_types">
        <item>@string/tag_type_unknown</item>
        <item>@string/tag_type_mode</item>
        <item>@string/tag_type_item</item>
    </string-array>
    <string-array name="tag_types_value">
        <item>unknown</item>
        <item>mode</item>
        <item>item</item>
    </string-array>


    <string name="device_status_unknown">unknown</string>
    <string name="device_status_active">active</string>
    <string name="device_status_inactive">inactive</string>
    <string name="device_status_error">error</string>

    <string-array name="device_statuses">
        <item>@string/device_status_unknown</item>
        <item>@string/device_status_active</item>
        <item>@string/device_status_inactive</item>
        <item>@string/device_status_error</item>
    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_items">Items</string>
    <string name="nav_tags">Tags</string>
    <string name="nav_devices">Devices</string>
    <string name="nav_users">Users</string>
    <string name="nav_tag_reader">Reader</string>
    <string name="nav_account">Account</string>
    <string name="nav_about">About</string>

    <string name="action_login">Sign In</string>
    <string name="action_logout">Logout</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_save">Save</string>
    <string name="action_close">Close</string>


    <!-- LoginActivity-->
    <string name="login_title">Log in</string>
    <string name="login_input_host">Server</string>
    <string name="login_input_username">Username</string>
    <string name="login_input_password">Password</string>
    <string name="login_loggingin">Signing in...</string>

    <string name="login_validate_host">Enter the address of the server</string>
    <string name="login_validate_username">Enter your username</string>
    <string name="login_validate_password">Enter password</string>
    <string name="login_validate_auth">Your username or password is incorrect</string>


    <!-- AccountActivity-->
    <string name="account_title">Account</string>

    <string name="account_form_fullname">Firstname and surname</string>
    <string name="account_form_username">Username</string>
    <string name="account_form_roles">Roles</string>


    <!-- PasswordActivity-->
    <string name="password_title">Change password</string>
    <string name="password_input_password_old">Old password</string>
    <string name="password_input_password_new">New password</string>
    <string name="password_input_password_again">Again new password</string>

    <string name="password_validate_password_old">Enter your current password</string>
    <string name="password_validate_password_new">Enter a new password</string>
    <string name="password_validate_password_again">Re-enter a new password, both passwords must be the same</string>

    <string name="password_successful">Password changed. Sign in again.</string>


    <!-- ItemListFragmnet-->
    <string name="item_list_title">Items</string>
    <string name="item_list_empty">No items</string>

    <!-- ItemFromActivity-->
    <string name="item_form_title_edit">Edit item</string>
    <string name="item_form_title_new">New item</string>
    <string name="item_form_input_name">Name</string>
    <string name="item_form_input_description">Description</string>
    <string name="item_form_input_amount">Amount</string>

    <string name="item_form_validate_name">Enter an item name, at least 3 characters long</string>
    <string name="item_form_validate_name_max_len">The item name can be up to 255 characters long</string>
    <string name="item_form_validate_description_max_len">Item description can be up to 2000 characters long</string>
    <string name="item_form_validate_amount">Enter amount</string>

    <!-- TagListFragmnet-->
    <string name="tag_list_title">Tags</string>
    <string name="tag_list_empty">No tags</string>

    <string name="card_tag_type">type:</string>
    <string name="card_tag_item">item:</string>

    <!-- TagFromActivity-->
    <string name="tag_form_title_edit">Edit tag</string>
    <string name="tag_form_input_uid">UID</string>
    <string name="tag_form_input_type">Type</string>
    <string name="tag_form_input_item">Item</string>
    <string name="tag_form_input_item_suggest">Search item...</string>
    <string name="tag_form_input_item_empty">Item not found</string>
    <string name="tag_form_validate_item">Search for an item</string>


    <!-- TagReaderActivity-->
    <string name="tag_reader_title">BPINI reader</string>
    <string name="tag_reader_wait_tag">Attach the tag</string>
    <string name="tag_reader_label_item">Item</string>
    <string name="tag_reader_label_tag">Tag</string>

    <string name="tag_reader_nfc_no_support">This device doesn\'t support NFC.</string>
    <string name="tag_reader_nfc_disabled">NFC is disabled.</string>
    <string name="tag_reader_nfc_enabled">Enabled</string>
    <string name="tag_reader_nfc_not_login">You are not logged in.</string>

    <!-- DeviceListFragmnet-->
    <string name="device_list_title">Devices</string>
    <string name="device_list_empty">No devices</string>
    <string name="device_list_allowed">Device enabled</string>
    <string name="device_list_disabled">Device disabled</string>

    <string name="device_list_context_menu_disabled">Disabled</string>
    <string name="device_list_context_menu_enabled">Enabled</string>

    <string name="card_device_version">version:</string>
    <string name="card_device_status">status:</string>
    <string name="card_device_serial_number">serial number:</string>
    <string name="card_device_ip_address">IP address:</string>


    <!-- UserListFragmnet-->
    <string name="user_list_title">Users</string>
    <string name="user_list_empty">No users</string>

    <string name="card_user_roles">Roles:</string>


    <!-- UserFormActivity-->
    <string name="user_form_title_edit">Edit user</string>
    <string name="user_form_title_new">New user</string>

    <string name="user_form_input_username">Username</string>
    <string name="user_form_input_password">Password</string>
    <string name="user_form_input_firstname">Firstname</string>
    <string name="user_form_input_lastname">Lastname</string>
    <string name="user_form_input_roles">Roles</string>

    <string name="user_form_validate_username">Enter a user name, at least 3 characters long</string>
    <string name="user_form_validate_username_max_len">The username can be up to 20 characters long</string>
    <string name="user_form_validate_password">Enter password</string>


    <string name="dialog_message_delete">The record will be deleted.</string>

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>


    <string name="form_saving">Saving...</string>
    <string name="form_saved">Saved</string>
    <string name="form_deleted">Deleted</string>

    <string name="timestamp_created">created:</string>
    <string name="timestamp_updated">updated:</string>

    <string name="request_unauthorized">Wrong login information. Sign in again.</string>
    <string name="request_forbidden">You do not have rights for this action.</string>
    <string name="request_notfound">The record was not found.</string>
    <string name="request_error">An unexpected error occurred on the server.</string>

    <string name="no_connection_message">Connection failed...</string>
    <string name="no_connection_repeat">Repeat</string>
    <string name="no_connection_server">Failed to connect to server.</string>
    <string name="no_connection_internet">Connect to the Internet.</string>


    <string name="about"><![CDATA[
        <b>version %1$s</b>
        <p>This application is used to manage the BPINI warehouse management. With this app, you will be online to track items, additions, and drops in inventory, manage your device, and set up tags.</p>
        <b>Author:</b> Jan Kohlíček
        ]]>
    </string>


</resources>
