<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cz.kohlicek.bpini.ui.tag.TagReaderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/form_horizontal_padding"
        android:paddingRight="@dimen/form_horizontal_padding">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_menu_nfc"
            android:tint="#BDBDBD" />

        <TextView
            android:id="@+id/wait_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/tag_reader_wait_tag"
            android:textAlignment="center"
            android:textSize="@dimen/form_label_text" />


        <include
            android:id="@+id/loading"
            layout="@layout/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/label_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/tag_reader_label_tag"
            android:textAlignment="center"
            android:textSize="@dimen/form_label_text"
            android:visibility="gone" />

        <include
            android:id="@+id/layout_tag"
            layout="@layout/card_tag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />


        <TextView
            android:id="@+id/label_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/tag_reader_label_item"
            android:textAlignment="center"
            android:textSize="@dimen/form_label_text"
            android:visibility="gone" />

        <include
            android:id="@+id/layout_item"
            layout="@layout/card_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />


    </LinearLayout>
</ScrollView>

