<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cz.kohlicek.bpini.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/form_horizontal_padding"
        android:paddingRight="@dimen/form_horizontal_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_row_vertical_margin"
            android:layout_marginTop="@dimen/form_row_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_host"
                android:inputType="textUri" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_row_vertical_margin"
            android:layout_marginTop="@dimen/form_row_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_username"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_row_vertical_margin"
            android:layout_marginTop="@dimen/form_row_vertical_margin"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</ScrollView>
