<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="cz.kohlicek.bpini.ui.account.PasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/form_horizontal_padding"
        android:paddingRight="@dimen/form_horizontal_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_layout_vertical_margin"
            android:layout_marginTop="@dimen/text_input_layout_vertical_margin"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input_password_old"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_layout_vertical_margin"
            android:layout_marginTop="@dimen/text_input_layout_vertical_margin"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input_password_new"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_layout_vertical_margin"
            android:layout_marginTop="@dimen/text_input_layout_vertical_margin"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input_password_again"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</ScrollView>
